[build-system]
requires = [
    "setuptools_scm[toml]>=6.0",
]

[project]
name = "pyclupan"
dynamic = ["version"]
readme = { file = "README.md", content-type = "text/markdown" }
description = "This is the pyclupan module."
authors = [{ name = "Atsuto Seko", email = "seko@cms.mtl.kyoto-u.ac.jp" }]
maintainers = [{ name = "Atsuto Seko", email = "seko@cms.mtl.kyoto-u.ac.jp" }]
requires-python = ">=3.9"
dependencies = [
    "numpy !=2.0.*",
    "scipy",
    "scikit-learn",
    "PyYAML >= 5.3",
    "setuptools >= 61.0",
    "spglib",
    "phonopy",
    "pypolymlp >= 0.16.0",

]
license = { file = "LICENSE" }

[project.optional-dependencies]
graphillion = ["graphillion"]
# spglib = ["spglib"]
tools = ["graphillion"]

[project.urls]
Homepage = "https://github.com/sekocha/pyclupan"
Repository = "https://github.com/sekocha/pyclupan"

[project.scripts]
pyclupan = "pyclupan.api.run_pyclupan:run"
pyclupan-sample = "pyclupan.api.run_pyclupan_sample:run"
pyclupan-cluster = "pyclupan.api.run_pyclupan_cluster:run"
pyclupan-calc = "pyclupan.api.run_pyclupan_calc:run"
pyclupan-regression = "pyclupan.api.run_pyclupan_regression:run"
pyclupan-mc = "pyclupan.api.run_pyclupan_mc:run"
pyclupan-utils = "pyclupan.api.run_pyclupan_utils:run"

[tool.setuptools_scm]
write_to = "./src/pyclupan/_version.py"
version_scheme = "post-release"
local_scheme = "no-local-version"

[tool.flake8]
max-line-length = 88
extend-ignore = "E203,W503"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
